--- a/website/templates/partials/navbar2.html
+++ b/website/templates/partials/navbar2.html
@@ -6,7 +6,7 @@
         </div>
         <ul>
             <li><a href="/adminindex" class="active">Home</a></li>
-            <li><a href="/adminindex" class="active">Contactme</a></li>
+            <li><a href="/admingallery" class="active">Gallery</a></li>
             <li><a href="/adminimageupload" class="active">Image Upload</a></li>
             <li><a href="/adminviewdata" class="active">View Data</a></li>
             {% if current_user.is_authenticated %}
