--- a/website/templates/partials/navbar1.html
+++ b/website/templates/partials/navbar1.html
@@ -8,6 +8,7 @@
             <li><a href="/" class="active">Home</a></li>
             <li><a href="/serviceaout" class="active">Services & About</a></li>
             <li><a href="/workcontact" class="active">Work & Contact</a></li>
+            <li><a href="/clientgallery" class="active">Gallery</a></li>
             <li><a href="/booking" class="active">Made Booking</a></li>
             {% if current_user.is_authenticated %}
             <li><a href="/logout" class="active" id="logout">Logout</a></li>
