--- a/website/templates/clientgallery.html
+++ b/website/templates/clientgallery.html
@@ -11,3 +11,18 @@
 <body>
     {% include 'partials/navbar2.html' %}
     
+    <header id="adminhome">
+        <div class="gallery-container">
+            {% for image in images %}
+            <div class="gallery-item" onclick="openModal('{{ url_for('static', filename=image.media_path) }}')">
+                {% if image.media_type == 'image' %}
+                <img src="{{ url_for('static', filename=image.media_path) }}" alt="{{ image.title }}">
+                {% elif image.media_type == 'video' %}
+                <video controls>
+                    <source src="{{ url_for('static', filename=image.media_path) }}" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                {% endif %}
+            </div>
+            {% endfor %}
+        </div>
