--- a/website/templates/clientgallery.html
+++ b/website/templates/clientgallery.html
@@ -26,3 +26,11 @@
             </div>
             {% endfor %}
         </div>
+
+        <!-- Modal for Full Image View -->
+        <div class="modal" id="imageModal">
+            <div class="modal-content">
+                <span class="close-btn" onclick="closeModal()">&times;</span>
+                <img id="modalImage" src="" alt="Full View">
+            </div>
+        </div>
