--- a/website/static/public/css/style.css
+++ b/website/static/public/css/style.css
@@ -759,3 +759,11 @@ footer .social .s-link:hover {
   border-radius: 5px;
   margin-bottom: 10px;
 }
+
+/* client side css */
+.gallery-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 15px;
+    padding: 20px;
+}
