--- a/website/static/public/css/style.css
+++ b/website/static/public/css/style.css
@@ -767,3 +767,11 @@ footer .social .s-link:hover {
     gap: 15px;
     padding: 20px;
 }
+
+.gallery-item {
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    transition: transform 0.3s;
+}
