--- a/website/static/public/css/style.css
+++ b/website/static/public/css/style.css
@@ -805,3 +805,18 @@ footer .social .s-link:hover {
     max-width: 90%;
     max-height: 90%;
 }
+
+.modal-content img,
+.modal-content video {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px; right: 20px;
+    font-size: 30px;
+    color: #fff;
+    cursor: pointer;
+}
