--- a/website/templates/clientgallery.html
+++ b/website/templates/clientgallery.html
@@ -13,9 +13,9 @@
     {% include 'partials/navbar2.html' %}
 
     <header id="adminhome">
-        <div class="gallery-container">
+        <div class="gallery-container-client">
             {% for image in images %}
-            <div class="gallery-item" onclick="openModal('{{ url_for('static', filename=image.media_path) }}')">
+            <div class="gallery-item-client" onclick="openModal('{{ url_for('static', filename=image.media_path) }}')">
                 {% if image.media_type == 'image' %}
                 <img src="{{ url_for('static', filename=image.media_path) }}" alt="{{ image.title }}">
                 {% elif image.media_type == 'video' %}
@@ -29,9 +29,9 @@
         </div>
 
         <!-- Modal for Full Image View -->
-        <div class="modal" id="mediaModal">
-            <div class="modal-content">
-                <span class="close-btn" onclick="closeModal()">&times;</span>
+        <div class="modal-client" id="mediaModal">
+            <div class="modal-content-client">
+                <span class="close-btn-client" onclick="closeModal()">&times;</span>
                 <img id="modalImage" src="" alt="Full View" style="display: none;">
                 <video id="modalVideo" controls style="display: none;">
                     <source id="modalVideoSource" src="" type="video/mp4">
