--- a/website/static/public/css/style.css
+++ b/website/static/public/css/style.css
@@ -817,7 +817,7 @@ footer .social .s-link:hover {
     position: absolute;
     top: 10px; right: 20px;
     font-size: 30px;
-    color: #fff;
+    color: #000000;
     cursor: pointer;
 }
 
