--- a/website/templates/partials/navbar2.html
+++ b/website/templates/partials/navbar2.html
@@ -4,8 +4,13 @@
         <div class="logo">
             <a href="/adminindex"><strong>BS</strong> Photography</a>
         </div>
-        <ul>
-            <li><a href="/adminindex" class="active">Home</a></li>
+        <ul class="nav2-list">
+            <li class="nav2-item dropdown"><a href="#">Home <span class="arrow">&#9662;</span></a>
+                <ul class="dropdown-menu-nav2">
+                    <li><a href="/adminindex" class="active">Home</a></li>
+                    <li><a href="/" class="active">Client side Home</a></li>
+                </ul>
+            </li>
             <li><a href="/admingallery" class="active">Gallery</a></li>
             <li><a href="/adminimageupload" class="active">Image Upload</a></li>
             <li><a href="/adminviewdata" class="active">View Data</a></li>
