--- a/website/static/public/css/style.css
+++ b/website/static/public/css/style.css
@@ -89,6 +89,59 @@
   border-radius: 0.50rem;
 }
 
+.nav2-list {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.nav2-item {
+  position: relative;
+}
+
+.nav2-item a {
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  display: block;
+}
+
+/* Arrow */
+.arrow {
+  font-size: 0.7rem;
+  margin-left: 5px;
+}
+
+/* Dropdown submenu */
+.dropdown-menu-nav2 {
+  display: none;
+  position: absolute;
+  background-color: #444;
+  min-width: 160px;
+  z-index: 1000;
+  top: 100%;
+  left: 0;
+}
+
+.dropdown-menu-nav2 li a {
+  color: white;
+  padding: 10px;
+  display: block;
+}
+
+.dropdown:hover .dropdown-menu-nav2 {
+  display: block;
+}
+
+/* close dropdown on outside click for mobile */
+@media (max-width: 768px) {
+  .nav-list {
+    flex-direction: column;
+  }
+}
+
 /* home and header css start */
 h1,
 h2,
