--- a/website/templates/clientgallery.html
+++ b/website/templates/clientgallery.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    {% include 'partials/navbar2.html' %}
-
+    {% include 'partials/navbar1.html' %}
+    <h1>gallery done</h1>
     <main id="adminhome">
         <div class="gallery-container-client">
             {% for image in images %}
