--- a/website/templates/partials/navbar2.html
+++ b/website/templates/partials/navbar2.html
@@ -7,7 +7,7 @@
         <ul class="nav2-list">
             <li class="nav2-item dropdown"><a href="#">Home <span class="arrow">&#9662;</span></a>
                 <ul class="dropdown-menu-nav2">
-                    <li><a href="/adminindex" class="active">Home</a></li>
+                    <li class=""><a href="/adminindex" class="active">Home</a></li>
                     <li><a href="/" class="active">Client side Home</a></li>
                 </ul>
             </li>
