--- a/website/templates/partials/navbar2.html
+++ b/website/templates/partials/navbar2.html
@@ -7,7 +7,7 @@
         <ul class="nav2-list">
             <li class="nav2-item dropdown"><a href="#">Home <span class="arrow">&#9662;</span></a>
                 <ul class="dropdown-menu-nav2">
-                    <li class=""><a href="/adminindex" class="active">Home</a></li>
+                    <li><a href="/adminindex" class="active">Home</a></li>
                     <li><a href="/" class="active">Client side Home</a></li>
                 </ul>
             </li>
@@ -22,3 +22,25 @@
         </ul>
     </div>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const dropdown = document.querySelector('.dropdown > a');
+
+        dropdown.addEventListener('click', (e) => {
+            e.preventDefault(); // prevent link click
+            const menu = dropdown.nextElementSibling;
+            menu.style.display = (menu.style.display === 'block') ? 'none' : 'block';
+        });
+
+        // Close dropdown when clicking elsewhere
+        document.addEventListener('click', (e) => {
+            const isDropdown = e.target.closest('.dropdown');
+            if (!isDropdown) {
+                document.querySelectorAll('.dropdown-menu').forEach(menu => {
+                    menu.style.display = 'none';
+                });
+            }
+        });
+    });
+</script>
