--- a/website/static/public/css/style.css
+++ b/website/static/public/css/style.css
@@ -115,7 +115,7 @@
 
 /* Dropdown submenu */
 .dropdown-menu-nav2 {
-  display:block;
+  display:none;
   position: absolute;
   background-color: #444;
   min-width: 160px;
@@ -871,6 +871,53 @@ footer .social .s-link:hover {
     font-size: 30px;
     color: #000000;
     cursor: pointer;
+}
+
+/* Navbar Responsive CSS */
+/* Hamburger Styles */
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+  gap: 5px;
+}
+
+.menu-toggle .bar {
+  height: 3px;
+  width: 25px;
+  background-color: white;
+  transition: 0.3s;
+}
+
+/* Responsive Nav */
+@media screen and (max-width: 768px) {
+  .navbar ul {
+    flex-direction: column;
+    width: 100%;
+    display: none;
+    background-color: #000;
+    padding: 1rem 0;
+  }
+
+  .navbar ul.active {
+    display: flex;
+  }
+
+  .menu-toggle {
+    display: flex;
+  }
+
+  .navbar ul li {
+    text-align: center;
+    width: 100%;
+    padding: 0.5rem 0;
+  }
+
+  .dropdown-menu-nav2 {
+    position: static;
+    background-color: #222;
+    padding-left: 1rem;
+  }
 }
 
 /* responsive gallery */
