--- a/website/templates/partials/navbar1.html
+++ b/website/templates/partials/navbar1.html
@@ -4,6 +4,11 @@
         <div class="logo">
             <a href="/"><strong>BS</strong> Photography</a>
         </div>
+        <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
         <ul>
             <li><a href="/" class="active">Home</a></li>
             <li><a href="/serviceaout" class="active">Services & About</a></li>
@@ -18,3 +23,14 @@
         </ul>
     </div>
 </div>
+
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const menuToggle = document.getElementById("mobile-menu");
+        const nav = document.querySelector(".navbar ul");
+
+        menuToggle.addEventListener("click", () => {
+            nav.classList.toggle("active");
+        });
+    });
+</script>
