--- a/website/static/public/css/style.css
+++ b/website/static/public/css/style.css
@@ -840,7 +840,7 @@ footer .social .s-link:hover {
     border-radius: 10px;
 }
 
-/* Modal Styles */
+/* Modal Styles css */
 .modal-client {
     display: none;
     position: fixed;
