--- a/website/templates/admingallery.html
+++ b/website/templates/admingallery.html
@@ -65,7 +65,7 @@
         }};
 
         window.openModal = function (id) {
-            const selected = images.find(img => img.galleryid == id); // Use == to match string vs int
+            const selected = images.find(img => img.id == id); // Use == to match string vs int
 
             // ✅ Debug logs here
             console.log('ID clicked:', id);
