model delete worked

--- a/website/templates/admingallery.html
+++ b/website/templates/admingallery.html
@@ -95,7 +95,7 @@
 
             deleteBtn.onclick = function () {
                 if (confirm("Are you sure you want to delete this item?")) {
-                    window.location.href = `/delete/gallery/${selected.galleryid}`;
+                    window.location.href = `/delete_gallery_item/${selected.galleryid}`;
                 }
             };
 
