--- a/website/templates/admingallery.html
+++ b/website/templates/admingallery.html
@@ -100,6 +100,7 @@
             };
 
             modal.style.display = "flex";
+            document.querySelector('.modal-content').scrollTop = 0; // Scroll to top on open
         };
 
         window.closeModal = function () {
