--- a/website/static/public/css/adminstyle.css
+++ b/website/static/public/css/adminstyle.css
@@ -297,13 +297,13 @@ th {
   box-sizing: border-box;
 }
 .modal-content {
-  max-width: 800px;
-  max-height: 90%;
-  background: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  position: relative;
-  text-align: center;
+  max-width: 100%;
+  max-height: 70vh;
+  height: auto;
+  width: auto;
+  border-radius: 8px;
+  object-fit: contain;
+  margin-bottom: 10px;
 }
 .modal-content img,
 .modal-content video {
