--- a/website/static/public/css/adminstyle.css
+++ b/website/static/public/css/adminstyle.css
@@ -297,18 +297,27 @@ th {
   box-sizing: border-box;
 }
 .modal-content {
+   width: 100%;
+  max-width: 800px;
+  background: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
+  max-height: 90vh;
+  overflow-y: auto;
+}
+.modal-content img,
+.modal-content video {
   max-width: 100%;
   max-height: 70vh;
   height: auto;
   width: auto;
   border-radius: 8px;
   object-fit: contain;
-  margin-bottom: 10px;
-}
-.modal-content img,
-.modal-content video {
-  max-width: 100%;
-  height: auto;
   margin-bottom: 10px;
 }
 .modal-buttons {
