--- a/website/static/public/css/adminstyle.css
+++ b/website/static/public/css/adminstyle.css
@@ -415,13 +415,24 @@ th {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .modal-content {
-    max-width: 95%;
-    padding: 10px;
+    padding: 15px;
+    max-height: 90vh;
   }
 
   .modal img {
     max-height: 60vh;
   }
+  .modal-content img,
+  .modal-content video {
+    max-height: 50vh;
+  }
+
+  .modal-buttons {
+    flex-direction: column;
+    align-items: stretch;
+  }
 }
+
+
