--- a/website/static/public/css/adminstyle.css
+++ b/website/static/public/css/adminstyle.css
@@ -287,38 +287,38 @@ th {
   z-index: 1000;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
   justify-content: center;
   align-items: center;
   overflow-y: auto;
-  padding: 20px;
-  box-sizing: border-box;
+  padding: 0;
+  overflow: hidden;
 }
 .modal-content {
-   width: 100%;
-  max-width: 800px;
-  background: #fff;
-  border-radius: 10px;
-  padding: 20px;
   position: relative;
+  max-width: 100vw;
+  max-height: 100vh;
+  margin: auto;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  box-sizing: border-box;
-  max-height: 90vh;
-  overflow-y: auto;
+  background: transparent; /* Fully transparent background */
+  padding: 0;
+  border: none;
+  box-shadow: none;
+  overflow: hidden;
 }
 .modal-content img,
 .modal-content video {
-  max-width: 100%;
-  max-height: 70vh;
-  height: auto;
   width: auto;
-  border-radius: 8px;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: contain;
-  margin-bottom: 5px;
+  border-radius: 8px;
+  margin: 0;
 }
 .modal-buttons {
   margin-top: 15px;
