--- a/website/static/public/css/adminstyle.css
+++ b/website/static/public/css/adminstyle.css
@@ -344,8 +344,16 @@ th {
   color: white; 
 }
 .close-btn {
-  background-color: #7f8c8d; 
-  color: white;
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 30px;
+  color: red;
+  font-weight: bold;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  z-index: 1001;
 }
 /* Pagination */
 .pagination {
