--- a/website/static/public/css/adminstyle.css
+++ b/website/static/public/css/adminstyle.css
@@ -306,8 +306,11 @@ th {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: visible;
+   overflow-y: auto;
+  overflow-x: hidden;
+  padding: 20px;
   box-sizing: border-box;
+  border-radius: 10px;
 }
 .modal-content img,
 .modal-content video {
@@ -345,17 +348,37 @@ th {
 }
 .close-btn {
   position: absolute;
-  top: -10px;
-  right: -10px;
+  right: 0;
   font-size: 28px;
   background-color: red;
   color: white;
-  border-radius: 50%;
-  padding: 6px 10px;
+  border-radius: 0 9px 0 9px;
+  padding: 1px 10px;
   cursor: pointer;
   z-index: 1001;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+/* for model zoom in and out */
+#modalMedia {
+  max-height: 70vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+#modalMedia img {
+  max-width: 100%;
+  max-height: 80vh;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  transition: transform 0.3s ease;
+  display: block;
+  margin: auto;
+}
+
 /* Pagination */
 .pagination {
   text-align: center;
